--- a/navbar/navstyle.css
+++ b/navbar/navstyle.css
@@ -1,6 +1,7 @@
 nav {
     min-height: 10vh;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "RM Neue Bold", "RM Neue";
+    font-size: large;
     display: flex;
     align-items: center;
     font-weight: bold;
