--- a/navbar/navstyle.css
+++ b/navbar/navstyle.css
@@ -4,6 +4,7 @@ nav {
     font-size: medium;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     font-weight: bold;
     border-bottom: 2px solid #f3f5f8;
     letter-spacing: 0.0469rem;
@@ -12,14 +13,15 @@ nav {
 .nav-list {
     list-style: none;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     margin: 0;
+    padding: 0;
 }
 
 .login_button {
     text-decoration: none;
     color: #3e31fa; 
-    margin-left: auto;
+    /* margin-left: auto; */
     margin-right: 65px;
     border: 2px solid #3e31fa;
     border-radius: 10px;
@@ -40,7 +42,7 @@ nav {
 }
 
 .nav-list li {
-    margin: 0 25px;
+    margin: 0 20px;
 }
 
 .nav-list li > a {
@@ -52,10 +54,12 @@ nav {
     color: #3e31fa;
 }
 
-.nav-list li img {
+.team_logo img{
     height: 45px;
     width: auto;
+    margin-left: 65px;
 }
+
 
 @media screen and (max-width: 600px) {
     nav{
