--- a/styles/sectiistyle.css
+++ b/styles/sectiistyle.css
@@ -24,6 +24,78 @@ body {
     width: auto;
 }
 
+.main-page {
+    /* background-color: #0F2145; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+}
+
+.main-article {
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    margin-top: 30px;
+    width: 85%;
+    background-color: #f3f5f8;
+    border-radius: 50px;
+}
+
+.main-article h1 {
+    font-size: 2rem;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+    color: #0f2145;
+    margin-left: 5%;
+}
+
+.main-image {
+    width: 60%;
+    height: auto;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    /* border-radius: 50px; */
+}
+
+.secondary-article {
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    margin-top: 30px;
+    width: 70%;
+    /* height: 300px; */
+    background-color: #f3f5f8;
+    border-radius: 50px;
+}
+
+.secondary-article-image {
+    width: 50%;
+    height: auto;
+    margin-left: auto;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+.secondary-article h2 {
+    font-size: 1.7rem;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+    color: #0f2145;
+    margin: 0 60px;
+}
+
+.separator {
+    margin: 100px 0;
+    height: 160px;
+    width: 100%;
+    background-color: #e1e5ea;
+}
+
 
 @media screen and (max-width: 600px) {
     .header {
