--- a/styles/sectiistyle.css
+++ b/styles/sectiistyle.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "RM Neue Bold", "RM Neue";
+    font-family: "RM Neue Bold", "RM Neue", Arial;
     color: #0f2145;
 }
 
@@ -12,7 +12,8 @@ body {
 }
 
 .header h1 {
-    margin-top: 68px;
+    margin-bottom: 0;
+    margin-top: 5vh;
     margin-left: 22%;
     font-size: 3rem;
 }
@@ -95,7 +96,6 @@ body {
     width: 100%;
     background-color: #e1e5ea;
 }
-
 
 @media screen and (max-width: 600px) {
     .header {
