--- a/styles/indexstyle.css
+++ b/styles/indexstyle.css
@@ -23,12 +23,13 @@ body {
 }
 
 .main-article h1 {
+    width: 100%;
     font-size: 2rem;
     font-weight: bold;
-    margin: 0;
-    padding: 0;
-    color: #0f2145;
     margin: 0 30px;
+    padding: 0;
+    text-align: center;
+    color: #0f2145;
 }
 
 .main-image {
@@ -41,11 +42,9 @@ body {
 
 .secondary-article {
     display: flex;
-    /* justify-content: center; */
     align-items: center;
     margin-top: 30px;
     width: 70%;
-    /* height: 300px; */
     background-color: #f3f5f8;
     border-radius: 50px;
 }
@@ -59,12 +58,13 @@ body {
 }
 
 .secondary-article h2 {
+    width: 100%;
     font-size: 1.7rem;
     font-weight: bold;
-    margin: 0;
-    padding: 0;
-    color: #0f2145;
     margin: 0 60px;
+    padding: 0 20px;
+    text-align: center;
+    color: #0f2145;
 }
 
 .separator {
@@ -116,6 +116,10 @@ body {
     height: auto;
     border-radius: 40px;
     object-fit: cover;
+}
+
+.titles-list {
+    align-self: center;
 }
 
 .titles-list > p {
