--- a/styles/sectiistyle.css
+++ b/styles/sectiistyle.css
@@ -45,12 +45,14 @@ body {
 }
 
 .main-article h1 {
-    font-size: 2rem;
+    width: 100%;
+    font-size: 4rem;
     font-weight: bold;
     margin: 0;
     padding: 0;
+    text-align: center;
     color: #0f2145;
-    margin-left: 5%;
+    /* margin-left: 5%; */
 }
 
 .main-image {
@@ -63,11 +65,9 @@ body {
 
 .secondary-article {
     display: flex;
-    /* justify-content: center; */
     align-items: center;
     margin-top: 30px;
     width: 70%;
-    /* height: 300px; */
     background-color: #f3f5f8;
     border-radius: 50px;
 }
@@ -81,12 +81,13 @@ body {
 }
 
 .secondary-article h2 {
-    font-size: 1.7rem;
+    width: 100%;
+    font-size: 2rem;
     font-weight: bold;
     margin: 0;
-    padding: 0;
+    padding: 0 20px;
+    text-align: center;
     color: #0f2145;
-    margin: 0 60px;
 }
 
 .separator {
@@ -96,6 +97,10 @@ body {
     background-color: #e1e5ea;
 }
 
+.white-separator {
+    height: 160px;
+    width: 100%;
+}
 
 @media screen and (max-width: 600px) {
     .header {
@@ -106,14 +111,4 @@ body {
         margin: 0 0 0 20px;
         font-size: 2.5rem;
     }
-
-    /* .content {
-        margin-left: 10px;
-        align-self: auto;
-        max-width: 100%;
-    }
-
-    .content p {
-        font-size: 1rem;
-    } */
 }
