--- a/styles/echipestyle.css
+++ b/styles/echipestyle.css
@@ -24,3 +24,42 @@ body {
     height: 100%;
     width: auto;
 }
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.football-team {
+    width: 60%;
+    align-items: center;
+}
+
+.football-team h3 {
+    font-size: 2rem;
+    margin: 10px 0;
+}
+
+.sport {
+    margin: 20px 0 10px 10%;
+    font-size: 2.5rem;
+}
+
+.players-list{
+    margin: 0 0 25px 0;
+    font-size: 1.2rem;
+    list-style: none;
+}
+
+.players-list li{
+    margin: 10px 0;
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.shirt-number {
+    font-size: 2.6rem;
+}
