--- a/styles/sectiistyle.css
+++ b/styles/sectiistyle.css
@@ -61,7 +61,12 @@ body {
     height: auto;
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
+    transition: transform 0.3s ease;
     /* border-radius: 50px; */
+}
+
+.main-image:hover {
+    transform: scale(1.05);
 }
 
 .secondary-article {
@@ -79,6 +84,11 @@ body {
     margin-left: auto;
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
+    transition: transform 0.3s ease;
+}
+
+.secondary-article-image:hover {
+    transform: scale(1.05);
 }
 
 .secondary-article h2 {
