--- a/styles/galeriestyle.css
+++ b/styles/galeriestyle.css
@@ -16,6 +16,11 @@
     vertical-align: middle;
     width: 100%;
     border-radius: 20px;
+    transition: transform 0.3s ease;
+}
+
+.col img:hover {
+    transform: scale(1.03);
 }
 
 @media screen and (max-width: 600px) {
